--- a/precios.html
+++ b/precios.html
@@ -210,7 +210,7 @@
             <div class="col-sm-4">
                 <address>
                         <h5>Contacto</h5>
-                        <p><ion-icon name="location-sharp"></ion-icon> Bv artigas 11600 (Montevideo,Uruguay)</p>
+                        <p><ion-icon name="location-sharp"></ion-icon>Casa central: Bv artigas 11600 (Montevideo,Uruguay)</p>
                         <p><ion-icon name="logo-whatsapp"></ion-icon> Whatsapp: +598 29876543</p>
                         <p><ion-icon name="call-sharp"></ion-icon> tel: +598 98765432</p>
                         <p><ion-icon name="mail-open-sharp"></ion-icon> Mail: alquicar@alquilerautos.com</p>
@@ -220,7 +220,7 @@
             <div class="col-sm-4 d-flex flex-column align-items-end">
                 <a href="/about.html">Nosotros</a>
                 <a href="/term y cond.html">Términos y condiciones</a>
-                <a href="/contacto.html">Contacto</a>
+                <a href="/Locales.html">Locales</a>
             </div>
         </div>
        
