agrego uso de eventos en index.html

--- a/Locales.html
+++ b/Locales.html
@@ -62,21 +62,21 @@
                     <a style="text-decoration: none" href="https://www.google.com/maps/place/Bv.+Gral.+Artigas,+11600+Montevideo,+Departamento+de+Montevideo/@-34.8864763,-56.1681451,17z/data=!3m1!4b1!4m5!3m4!1s0x959f800ec083c7bf:0xde0fc6f28df9c49e!8m2!3d-34.8864807!4d-56.1659564">
                         Bv artigas 11600 (Montevideo, Uruguay)</a>
                 </p>
-                <img src="/imagenes/Mapas/Casa central.jpg">
+                <img src="/imagenes/Mapas/Casa central.jpg" class="img-fluid">
             </div>
             <div class="tab-pane fade show" id="carrasco" role="tabpanel" aria-labelledby="carrasco-tab">
                 <p>
                     <a style="text-decoration: none" href="https://www.google.com/maps/place/Av.+Gral.+Rivera+6803,+11500+Montevideo,+Departamento+de+Montevideo/@-34.8847101,-56.0563999,17z/data=!3m1!4b1!4m5!3m4!1s0x959f86690ba9611f:0x6341090ee6c9f4fe!8m2!3d-34.8847145!4d-56.0542112">
                         Av. Gral. Rivera 6803, esquina Dr. Eduardo Blanco Acevedo (Montevideo, Uruguay)</a>
                 </p>
-                <img src="/imagenes/Mapas/Carrasco.jpg">
+                <img src="/imagenes/Mapas/Carrasco.jpg" class="img-fluid">
             </div>
             <div class="tab-pane fade show" id="colonia" role="tabpanel" aria-labelledby="colonia-tab">
                 <p>
                     <a style="text-decoration:none" href="https://www.google.com/maps/place/Tacuaremb%C3%B3+609,+70000+Col+Del+Sacramento,+Departamento+de+Colonia/@-34.463014,-57.838636,16.5z/data=!4m5!3m4!1s0x95a312634f4ea0cd:0xdcdf87ecd4220619!8m2!3d-34.4628759!4d-57.8374025">
                         Tacuarembó 609, esquina avenida Baltasar Brum (Colonia del sacramento, Colonia, Uruguay)</a>
                 </p>
-                <img src="/imagenes/Mapas/Colonia.jpg">
+                <img src="/imagenes/Mapas/Colonia.jpg" class="img-fluid">
             </div>
         </div>
 
