--- a/reserva.html
+++ b/reserva.html
@@ -128,6 +128,10 @@
                 <button type="submit" class="btn btn-primary" onclick="alert('Reserva realizada')">Enviar</button>
                 
             </form>
+
+            <button type="button" class="btn btn-lg btn-danger" title="Popover title" data-content=" hhhh">
+
+            </button>
     </div>
 
 
