--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!--Bootstrap Css-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css"  rel="stylesheet" />
-    <link href="CSS/main.css"  rel="stylesheet" />
+    <link href="CSS/styles.css"  rel="stylesheet" />
     <link href="node_modules/open-iconic/font/css/open-iconic-bootstrap.css"  rel="stylesheet" />
     <title>Alquicar</title>
   </head>
