uso de scripts npm

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <!--Bootstrap Css-->
+    <!--build:css dist/index.css-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css"  rel="stylesheet" />
     <link href="CSS/styles.css"  rel="stylesheet" />
     <link href="node_modules/open-iconic/font/css/open-iconic-bootstrap.css"  rel="stylesheet" />
+    <!--endbuild-->
     <title>Alquicar</title>
   </head>
   <body> 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"><!--fixed-top es para que el navbar quede aunque baje en la página-->
         <!--el navbar-expand hace que se expanda la navbar y si achico se pasa a menú desplegable, el md es el tamaño, puede ser lg(large) o sm(small)-->
-        <a class="navbar-brand" href="/index.html"><img src="/imagenes/logos/Banner2.jpg" class="imagenlogo"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/images/Banner2.jpg" class="imagenlogo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span><!--éste es el ícono del botón-->
         </button>
@@ -24,7 +25,7 @@
                 <li class="nav-item"><a class="nav-link" href="/about.html">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="/precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="/termycond.html">Términos y condiciones</a></li>
             </ul>
         </div>
     </nav>
@@ -43,19 +44,19 @@
           </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="/imagenes/carousel/slide-1.jpg" alt="primer Slide">
+                <img class="d-block w-100" src="/images/slide-1.jpg" alt="primer Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/imagenes/carousel/slide-2.jpg" alt="segundo Slide">
+                <img class="d-block w-100" src="/images/slide-2.jpg" alt="segundo Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/imagenes/carousel/slide-3.jpg" alt="tercer Slide">
+                <img class="d-block w-100" src="/images/slide-3.jpg" alt="tercer Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/imagenes/carousel/slide.4.png" alt="cuarto Slide">
+                <img class="d-block w-100" src="/images/slide.4.png" alt="cuarto Slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/imagenes/carousel/slide.5.png" alt="quinto Slide">
+                <img class="d-block w-100" src="/images/slide.5.png" alt="quinto Slide">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
@@ -142,7 +143,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Citroen</h4>
                     <h5 class="card-subtitle text-muted"> C4</h5>
-                    <img src="/imagenes/fotos autos/Citroen-C4-2021-colores.jpg" class="card-img-top">
+                    <img src="/images/Citroen-C4-2021-colores.jpg" class="card-img-top">
                     <li class="card-text">Año 2021</li>
                     <li class="card-text">motor 1.2 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -160,7 +161,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Volkswagen</h4>
                     <h5 class="card-subtitle text-muted"> Gol</h5>
-                    <img src="/imagenes/fotos autos/Volkswagen_Gol.jpg" class="card-img-top">
+                    <img src="/images/Volkswagen_Gol.jpg" class="card-img-top">
                     <li class="card-text">Año 2019</li>
                     <li class="card-text">motor 1.6 diessel</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -185,7 +186,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Promoción por nuevo vehículo!!!"> Renault</h4>
                     <h5 class="card-subtitle text-muted"> Kwid</h5>
-                    <img src="/imagenes/fotos autos/Renault_Kwid.jpg" class="card-img-top">
+                    <img src="/images/Renault_Kwid.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 1.0 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -203,7 +204,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Hyundai</h4>
                     <h5 class="card-subtitle text-muted"> Creta</h5>
-                    <img src="/imagenes/fotos autos/Hyundai_Creta.jpg" class="card-img-top">
+                    <img src="/images/Hyundai_Creta.jpg" class="card-img-top">
                     <li class="card-text">Año 2020</li>
                     <li class="card-text">motor 1.6 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -221,7 +222,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Hyundai H1</h4>
                     <h5 class="card-subtitle text-muted"> H1</h5>
-                    <img src="/imagenes/fotos autos/Hyundai-h-minbus-portada-1.jpg" class="card-img-top">
+                    <img src="/images/Hyundai-h-minbus-portada-1.jpg" class="card-img-top">
                     <li class="card-text">Año 2019</li>
                     <li class="card-text">motor 2.4 diessel</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -239,7 +240,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Renault</h4>
                     <h5 class="card-subtitle text-muted"> Oroch</h5>
-                    <img src="/imagenes/fotos autos/oroch.jpg" class="card-img-top">
+                    <img src="/images/oroch.jpg" class="card-img-top">
                     <li class="card-text">Año 2019</li>
                     <li class="card-text">motor 1.6 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -257,7 +258,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Volkswagen</h4>
                     <h5 class="card-subtitle text-muted"> Nivus tredline</h5>
-                    <img src="/imagenes/fotos autos/nivus.jpg" class="card-img-top">
+                    <img src="/images/nivus.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 1.0 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -275,7 +276,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> Audi</h4>
                     <h5 class="card-subtitle text-muted"> A8 </h5>
-                    <img src="/imagenes/fotos autos/Audi A8.jpg" class="card-img-top">
+                    <img src="/images/Audi A8.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</p>
                     <li class="card-text">motor hibrido, 3.0 gasolina + motor eléctrico</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -293,7 +294,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title"> BMW</h4>
                     <h5 class="card-subtitle text-muted"> 118I </h5>
-                    <img src="/imagenes/fotos autos/2017-bmw-1-seriesjpg.jpg" class="card-img-top">
+                    <img src="/images/2017-bmw-1-seriesjpg.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</p>
                     <li class="card-text">motor 1.6 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -314,7 +315,7 @@
                 <div class="card-body text-center">
                     <h4 class="card-title" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Promoción por nuevo vehículo!!!" > Mercedes</h4>
                     <h5 class="card-subtitle text-muted"> Benz SLK 350</h5>
-                    <img src="/imagenes/fotos autos/Mercedes-Benz-SLK.jpg" class="card-img-top">
+                    <img src="/images/Mercedes-Benz-SLK.jpg" class="card-img-top">
                     <li class="card-text">Año 2022</li>
                     <li class="card-text">motor 3.0 gasolina</li>
                     <li class="card-text">Aire acondicionado</li>
@@ -504,7 +505,7 @@
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-end">
                 <a href="/about.html">Nosotros</a>
-                <a href="/term y cond.html">Términos y condiciones</a>
+                <a href="/termycond.html">Términos y condiciones</a>
                 <a href="/Locales.html">Locales</a>
             </div>
         </div>
@@ -512,9 +513,10 @@
     </footer>
     <!--optional JavaScript-->
     <!--JQuery fisrst, then popper, then Bootstrap-->
+    <!-- build:js dist/index.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.jss"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script> <!-- es el script para poder usar íconos-->
     <script>    
@@ -524,12 +526,6 @@
          $('.carousel').carousel({interval: 2000});
         });
 
-
-        /* así se hace según los docs de bootstrap 5.2:
-        const myModalEl = document.getElementById('modalreservar')
-             myModalEl.addEventListener('show.bs.modal', event => {
-         console.log('el modal se está mostrando');
-        })*/
         $('#modalreservar2').on('show.bs.modal', function (e){
             console.log('el modal se está mostrando');
 
@@ -551,6 +547,6 @@
             $('#btnreservamodal2').prop('disabled',false);
         })
     </script>
-    
+    <!--enbuild-->
   </body>
 </html>
