--- a/reserva.html
+++ b/reserva.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <!--Bootstrap Css-->
+    <!-- build:css dist/reserva.css -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="CSS/main.css" rel="stylesheet" />
+    <link href="CSS/styles.css" rel="stylesheet" />
+    <!-- endbuild -->
     <title>Alquicar</title>
 </head>
 
@@ -28,7 +29,7 @@
                 <li class="nav-item"><a class="nav-link" href="/about.html">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="/precios.html">Precios</a></li>
                 <li class="nav-item" aria-current="page"><a class="nav-link" href="/contacto.html">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="/termycond.html">Términos y condiciones</a></li>
 
             </ul>
         </div>
@@ -154,7 +155,7 @@
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-end">
                 <a href="/about.html">Nosotros</a>
-                <a href="/term y cond.html">Términos y condiciones</a>
+                <a href="/termycond.html">Términos y condiciones</a>
                 <a href="/Locales.html">Locales</a>
             </div>
         </div>
@@ -162,10 +163,13 @@
     </footer>
     <!--optional JavaScript-->
     <!--JQuery fisrst, then popper, then Bootstrap-->
+    <!-- build:js dist/reserva.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
 </html>
