--- a/Locales.html
+++ b/Locales.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <!--Bootstrap Css-->
+    <!-- build:css dist/locales.css -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="CSS/main.css" rel="stylesheet" />
+    <link href="CSS/styles.css" rel="stylesheet" />
+    <!-- endbuild -->
     <title>Alquicar</title>
 </head>
 
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <!--fixed-top es para que el navbar quede aunque baje en la página-->
         <!--el navbar-expand hace que se expanda la navbar y si achico se pasa a menú desplegable, el md es el tamaño, puede ser lg(large) o sm(small)-->
-        <a class="navbar-brand" href="#">Automóviles</a>
+        <a class="navbar-brand" href="/index.html"><img src="/images/Banner2.jpg" class="imagenlogo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +29,7 @@
                 <li class="nav-item"><a class="nav-link" href="/about.html">Nosotros</a></li>
                 <li class="nav-item active" aria-current="page"><a class="nav-link" href="/precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contacto.html">Contacto</a></li>
-                <li class="nav-item"><a class="nav-link" href="/term y cond.html">Términos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="/termycond.html">Términos y condiciones</a></li>
 
             </ul>
         </div>
@@ -62,21 +63,21 @@
                     <a style="text-decoration: none" href="https://www.google.com/maps/place/Bv.+Gral.+Artigas,+11600+Montevideo,+Departamento+de+Montevideo/@-34.8864763,-56.1681451,17z/data=!3m1!4b1!4m5!3m4!1s0x959f800ec083c7bf:0xde0fc6f28df9c49e!8m2!3d-34.8864807!4d-56.1659564">
                         Bv artigas 11600 (Montevideo, Uruguay)</a>
                 </p>
-                <img src="/imagenes/Mapas/Casa central.jpg" class="img-fluid">
+                <img src="/images/Casa central.jpg" class="img-fluid">
             </div>
             <div class="tab-pane fade show" id="carrasco" role="tabpanel" aria-labelledby="carrasco-tab">
                 <p>
                     <a style="text-decoration: none" href="https://www.google.com/maps/place/Av.+Gral.+Rivera+6803,+11500+Montevideo,+Departamento+de+Montevideo/@-34.8847101,-56.0563999,17z/data=!3m1!4b1!4m5!3m4!1s0x959f86690ba9611f:0x6341090ee6c9f4fe!8m2!3d-34.8847145!4d-56.0542112">
                         Av. Gral. Rivera 6803, esquina Dr. Eduardo Blanco Acevedo (Montevideo, Uruguay)</a>
                 </p>
-                <img src="/imagenes/Mapas/Carrasco.jpg" class="img-fluid">
+                <img src="/images/Carrasco.jpg" class="img-fluid">
             </div>
             <div class="tab-pane fade show" id="colonia" role="tabpanel" aria-labelledby="colonia-tab">
                 <p>
                     <a style="text-decoration:none" href="https://www.google.com/maps/place/Tacuaremb%C3%B3+609,+70000+Col+Del+Sacramento,+Departamento+de+Colonia/@-34.463014,-57.838636,16.5z/data=!4m5!3m4!1s0x95a312634f4ea0cd:0xdcdf87ecd4220619!8m2!3d-34.4628759!4d-57.8374025">
                         Tacuarembó 609, esquina avenida Baltasar Brum (Colonia del sacramento, Colonia, Uruguay)</a>
                 </p>
-                <img src="/imagenes/Mapas/Colonia.jpg" class="img-fluid">
+                <img src="/images/Colonia.jpg" class="img-fluid">
             </div>
         </div>
 
@@ -102,7 +103,7 @@
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-end">
                 <a href="/about.html">Nosotros</a>
-                <a href="/term y cond.html">Términos y condiciones</a>
+                <a href="/termycond.html">Términos y condiciones</a>
                 <a href="/Locales.html">Locales</a>
             </div>
         </div>
@@ -110,9 +111,11 @@
     </footer>
     <!--optional JavaScript-->
     <!--JQuery fisrst, then popper, then Bootstrap-->
+    <!-- build:js dist/locales.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.css"></script>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
