--- a/Locales.html
+++ b/Locales.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <!-- build:css dist/locales.css -->
+    <!-- build:css dist/index.css -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="CSS/styles.css" rel="stylesheet" />
     <!-- endbuild -->
@@ -111,11 +111,13 @@
     </footer>
     <!--optional JavaScript-->
     <!--JQuery fisrst, then popper, then Bootstrap-->
-    <!-- build:js dist/locales.js -->
+    <!-- build:js dist/main.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.css"></script>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.css"></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script> <!-- es el script para poder usar íconos-->
+    <script src="/js/index.js"></script>
     <!-- endbuild -->
   </body>
 </html>
